Kubernetes/orgfin-backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orgfin-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orgfin-backend-label
  template:
    metadata:
      labels:
        app: orgfin-backend-label
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: orgfin-backend
          image: ypeskov/api-orgfin:1.6.8
          ports:
            - containerPort: 8000
